<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#EAECEE"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:src="@mipmap/watch_5"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E4E5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:focusableInTouchMode="true"
            android:focusable="false"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="fitXY"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_heard_picture"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_account_described"
                android:textColor="@color/register_text_color"
                android:layout_marginLeft="6dp"
                android:textSize="15dp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="#8B8B8B"
                android:layout_marginLeft="5dp"
                />
            <EditText
                android:id="@+id/register_pager_input_account_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:inputType="textWebEmailAddress"
                android:background="@null"
                android:textSize="13dp"
                android:textColorHint="@color/register_text_color"
                android:hint="@string/input_account_hint"
                android:textColor="@color/register_text_color"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E4E5"/>

        //Input password
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:focusableInTouchMode="true"
            android:focusable="false"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_password_picture"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_password_described"
                android:textColor="@color/register_text_color"
                android:layout_marginLeft="6dp"
                android:textSize="15dp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="#8B8B8B"
                android:layout_marginLeft="5dp"
                />
            <EditText
                android:id="@+id/register_pager_input_password_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="textPassword"
                android:textSize="13dp"
                android:textColorHint="@color/register_text_color"
                android:hint="@string/input_password_hint"
                android:textColor="@color/register_text_color"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="#8B8B8B"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E4E5"/>


        //again input password
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:focusableInTouchMode="true"
            android:focusable="false"
            >
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_password_picture"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_password_described"
                android:textColor="@color/register_text_color"
                android:layout_marginLeft="6dp"
                android:textSize="15dp"
                />
            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background="#8B8B8B"
                android:layout_marginLeft="5dp"
                />
            <EditText
                android:id="@+id/register_pager_input_password_again_ed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:inputType="textPassword"
                android:textColorHint="@color/register_text_color"
                android:textSize="13dp"
                android:hint="@string/input_password_again"
                android:textColor="@color/register_text_color"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E4E5"/>
    </LinearLayout>
    <Button
        android:id="@+id/create_new_account_bt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/button_background_shape"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/welcome_register_button"
        android:layout_marginTop="15dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_user_have_account"
            android:textColor="@color/register_text_color"
            />
        <Button
            android:id="@+id/have_account_to_login"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:textColor="@color/select_text_color"
            android:layout_marginLeft="10dp"
            android:text="@string/welcome_login_button"
            android:background="@drawable/button_frame_shape"
            />
    </LinearLayout>
</LinearLayout>