<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/welcome_tutorial_title"
        android:textColor="@color/text_color_default"
        android:textSize="28sp"
        android:textStyle="italic"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/tutorial_grad_view"
            android:layout_width="200dp"
            android:layout_height="240dp"
            ></android.support.v4.view.ViewPager>

        <LinearLayout
            android:id="@+id/looper_point_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal"
            >
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        >

        <Button
            android:id="@+id/welcome_register_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"
            android:background="@drawable/button_background_shape"
            android:hint="@string/welcome_register_button"
            android:paddingLeft="6dp"
            />
        <Button
            android:id="@+id/welcome_login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_background_shape"
            android:hint="@string/welcome_login_button"
            android:paddingLeft="6dp"
            />
    </LinearLayout>
</RelativeLayout>